[package]
name = "cluster"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bcluster"
path = "src/bcluster.rs"

[[bin]]
name = "bgame"
path = "src/bgame.rs"

[[bin]]
name = "bclient"
path = "src/bclient.rs"

[[bin]]
name = "bgate"
path = "src/bgate.rs"

[[bin]]
name = "btest"
path = "src/btest.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }